# project-hawk

./: .gitignore  README.md  Raw-Angle-Read-MPU6050.txt  fypwriteup
Client/: Client.cpp  Client.h  main.cpp
Remote Client/arduino/balancer/: platformio.ini
Remote Client/arduino/balancer/include/: IMU.h  Timed.h  config.h  myactions.h
Remote Client/arduino/balancer/src/: IMU.cpp  Timed.cpp  main.cpp
Remote Client/arduino/receiver_beta/src/: main.cpp
Server/: CMakeLists.txt  Client.cpp  Client.h  Server.cpp  Server.h  main.cpp
docs/: protocol.txt
drone/arduino/MultiWii_2_4/MultiWii/: MultiWii.ino  Sensors.cpp  config.h
drone/rpi/: CMakeLists.txt  PPM.c  PPM.py  dialup.sh  main.c
drone/rpi/drone_utils/: encoder.c  encoder.h  ppmer.c  ppmer.h  servo.c  state.c  state.h
drone/rpi/network_utils/: connection.c  connection.h  hawk-actions.c  hawk-actions.h  hawk-packets.c  hawk-packets.h  packetizer.c  packetizer.h  string-utils.c  string-utils.h
drone/rpi/peripheral_utils/: i2c_reader.c  i2c_reader.h
paper/: citations.bib  disertation.tex
remote/: CMakeLists.txt  main.cpp
remote/android/app/: build.gradle
remote/android/app/src/main/: AndroidManifest.xml
remote/android/app/src/main/java/com/example/myapplication/: CircleView.java  MainActivity.java  MenuActivity.java  MenuFragment.java  NetworkManager.java  Packetizer.java  PadUtils.java  RemoteState.java  SplashActivity.java  TCPClient.java  TCPListener.java  UDPClient.java  ViewUtils.java
remote/android/app/src/main/java/utils/: PadUtils.java  ViewUtils.java
remote/android/app/src/main/res/drawable/: ic_launcher_foreground.xml
remote/android/app/src/main/res/drawable-anydpi/: battery_level_good.xml  battery_level_low.xml  ic_action_name.xml  no_signal_icon.xml  signal_icon.xml
remote/android/app/src/main/res/drawable-v24/: ic_launcher_foreground.xml
remote/android/app/src/main/res/layout/: activity_main.xml  activity_menu.xml  activity_splash.xml  preference_screen.xml
remote/android/app/src/main/res/values/: colors.xml  lists.xml  strings.xml  styles.xml
remote/android/app/src/main/res/xml/: preferences.xml
remote/android/gradle/wrapper/: gradle-wrapper.properties
server/: CMakeCache.txt  CMakeLists.txt  hawk.pem  keypair.key  main.c  main.cpp  server.c  ssl.c
server/Client/: CMakeLists.txt  client  client.c  read.c  read.h  socket.c  socket.h
server/drone_utils/: state.c  state.h
server/network_utils/: hawk-packets.c
server/network_utils/auth/: ssl.c
server/server_utils/: connection.c  connection.h  hawk-actions.c  hawk-actions.h  hawk-packets.c  hawk-packets.h
